# hwid

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  requirements.docs.txt  sitemap.xml  techstack.md  techstack.yml
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST/: pull_request_template.md
.github/workflows/: android-ci.yml  cd.yml  ci.yml  docs-deploy.yml  gh-pages.yml  release-drafter.yml
changelog/: index.html
docs/: changelog.md  index.md  reference.md
examples/hwid-cli-with-typer/: __init__.py  main.py  pyproject.toml
examples/simple-application/: __init__.py  app.py  information.json  pyproject.toml
hwid/: __init__.py  __main__.py  core.py  exceptions.py  main.py
hwid/impl/: darwin.py  linux.py  win32.py
reference/: index.html
search/: search_index.json
src/hwid/: __init__.py  __main__.py  core.py  exceptions.py  logger.py  main.py
src/hwid/impl/: __init__.py  darwin.py  linux.py  win32.py
