[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hwid"
version = "0.1.0"
description = "Extract the `hwid` on Windows, Linux, Mac. Cross-platform using Python, native OS detection."
authors = ["hasansezertasan <hasansezertasan@gmail.com>"]
maintainers = ["hasansezertasan <hasansezertasan@gmail.com>"]
keywords = ["hwid", "hardware", "id", "unique", "identifier", "machine", "fingerprint", "fingerprinting", "licensing", "license", "licensing",  "identification", "machine"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  'Environment :: Console',
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
packages = [{ include = "hwid" }]
include = ["CHANGELOG.md"]
readme = "README.md"
license = "MIT"

[tool.poetry.urls]
repository = "https://github.com/hasansezertasan/hwid"
homepage = "https://github.com/hasansezertasan/hwid"
documentation = "https://hasansezertasan.github.io/hwid/"



[tool.ruff]
# Run `ruff linter` command to see all available linters and their descriptions
target-version = "py311"
line-length = 120
select = [
  # "B",
  # "C",
  "E",
  "F",
  "W",
  "I",
  "B9",
]
ignore = [
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "E501", # line too long, handled by black
  "F401", # imported but unused
  "E402", # module level import not at top of file
  "E712", # comparison to True should be 'if cond is True:' or 'if cond:'
]
exclude = [
  "alembic",
  "migrations",
]
show-fixes = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
skip_glob = ["**/alembic/**", "**/migrations/**"]


[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic
  )/
)
'''


[tool.poe.tasks]
black = "black ."
isort = "isort ."
ruff = "ruff ."
bir = ["black", "isort", "ruff"]

[tool.poetry.scripts]
hwid = "hwid.__main__:app"


[tool.poetry.dependencies]
python = ">=3.0,<4.0"
